# pkg/api/imagespec.go
@@ -23,16 +23,16 @@ package api
 
 // ImageSpec .....
 type ImageSpec struct {
-	Repository            string
-	Tag                   string
-	Sha                   string
-	Scheme                string
-	Domain                string
-	Port                  int
-	User                  string
-	Password              string
-	HubProjectName        string
-	HubProjectVersionName string
-	HubScanName           string
-	Priority              int
+	Repository                  string
+	Tag                         string
+	Sha                         string
+	Scheme                      string
+	Domain                      string
+	Port                        int
+	User                        string
+	Password                    string
+	BlackDuckProjectName        string
+	BlackDuckProjectVersionName string
+	BlackDuckScanName           string
+	Priority                    int
 }
